--- a/src/app/input-integer/input-integer.component.html
+++ b/src/app/input-integer/input-integer.component.html
@@ -1,4 +1,4 @@
-<div class="input-group">
+<div >
     <button class="btn" (click)="downQuantity()">-</button>
     <input type="text" name="cuantity" id="" [(ngModel)]="quantity"
         (keyup)="onChangeQuantity($event)">
